# NEAR_RUST_CrossWordPuzzle

./: Cargo.toml  README.md  package-lock.json
contract/res/: my_crossword.wasm
res/: my_crossword.wasm
src/: lib.rs
