[package]
authors = ["NEAR Friend <friend@example.com>"]
edition = "2018"
name = "my-crossword"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
hex = "0.4.3"
near-sdk = "4.0.0-pre.4"

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
debug = false
lto = true
opt-level = "z"
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true
